--- a/Pilhas/Dynamic_Stack/Dynamic_Stack.cbp
+++ b/Pilhas/Dynamic_Stack/Dynamic_Stack.cbp
@@ -2,12 +2,12 @@
 <CodeBlocks_project_file>
 	<FileVersion major="1" minor="6" />
 	<Project>
-		<Option title="Static_Stack" />
+		<Option title="Dynamic_Stack" />
 		<Option pch_mode="2" />
 		<Option compiler="gcc" />
 		<Build>
 			<Target title="Debug">
-				<Option output="bin/Debug/Static_Stack" prefix_auto="1" extension_auto="1" />
+				<Option output="bin/Debug/Dynamic_Stack" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Debug/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
@@ -16,7 +16,7 @@
 				</Compiler>
 			</Target>
 			<Target title="Release">
-				<Option output="bin/Release/Static_Stack" prefix_auto="1" extension_auto="1" />
+				<Option output="bin/Release/Dynamic_Stack" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Release/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
@@ -31,10 +31,14 @@
 		<Compiler>
 			<Add option="-Wall" />
 		</Compiler>
-		<Unit filename="Static_Stack.c">
+		<Unit filename="Doub_List.c">
 			<Option compilerVar="CC" />
 		</Unit>
-		<Unit filename="Static_Stack.h" />
+		<Unit filename="Doub_List.h" />
+		<Unit filename="Dynamic_Stack.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="Dynamic_Stack.h" />
 		<Unit filename="main.c">
 			<Option compilerVar="CC" />
 		</Unit>
