--- a/Filas/StaticQueue/StaticQueue.cbp
+++ b/Filas/StaticQueue/StaticQueue.cbp
@@ -31,6 +31,10 @@
 		<Compiler>
 			<Add option="-Wall" />
 		</Compiler>
+		<Unit filename="Static_Queue.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="Static_Queue.h" />
 		<Unit filename="main.c">
 			<Option compilerVar="CC" />
 		</Unit>
